--- a/analysis/orbit_configs/fixed/site_1_2020.yaml
+++ b/analysis/orbit_configs/fixed/site_1_2020.yaml
@@ -40,6 +40,9 @@ port:
 project_parameters:
   opex_rate: 75
   turbine_capex: 1100
+  ncf: 0.486
+  opex: 129
+  fcr: .1
 scour_protection_design:
   cost_per_tonne: 20
   scour_protection_depth: 1
