--- a/analysis/orbit_configs/fixed/site_1_2035.yaml
+++ b/analysis/orbit_configs/fixed/site_1_2035.yaml
@@ -1,3 +1,4 @@
+# Some text
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
   num_feeders: 1
@@ -6,8 +7,7 @@ array_cable_bury_vessel: current_cable_lay_vessel
 array_cable_install_vessel: current_cable_lay_vessel
 array_system_design:
   cables:
-  - XLPE_66kV_1
-  - XLPE_66kV_2
+  - XLPE_132kV_1
 design_phases:
 - MonopileDesign
 - ScourProtectionDesign
@@ -17,8 +17,8 @@ design_phases:
 export_cable_bury_vessel: current_export_cable_lay_vessel
 export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
-  cables: XLPE_220kV_1
-  percent_added_length: 0.1
+  cables: 400kV_HVDC
+  percent_added_length: 0.05
 feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -30,7 +30,7 @@ install_phases:
 num_feeders: 2
 plant:
   layout: ring
-  num_turbines: 100
+  num_turbines: 67
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
@@ -40,20 +40,28 @@ port:
 project_parameters:
   opex_rate: 75
   turbine_capex: 1100
-  ncf: 0.486
-  opex: 129
+  ncf: 0.516
+  opex: 65
   fcr: .1
 scour_protection_design:
   cost_per_tonne: 20
   scour_protection_depth: 1
 site:
-  depth: 20
+  depth: 40
   distance: 150
-  distance_to_landfall: 25
-  mean_windspeed: 9
+  distance_to_landfall: 100
+  mean_windspeed: 9.5
 spi_vessel: current_scour_protection_vessel
 substation_design:
+  backup_gen_cost: 2000000.0
+  mpt_cost_rate: 25000
   num_substations: 3
-turbine: 10MW_generic
+  oss_substructure_cost_rate: 6000
+  other_ancillary_cost: 6000000.0
+  shunt_cost_rate: 70000
+  switchgear_cost: 2900000.0
+  topside_design_cost: 3000000.0
+  topside_fab_cost_rate: 29000
+turbine: 15MW_generic
 wtiv: current_wtiv
 weather: block_island.csv
