--- a/analysis/orbit_configs/fixed/site_1_2035.yaml
+++ b/analysis/orbit_configs/fixed/site_1_2035.yaml
@@ -1,4 +1,7 @@
-# Some text
+# Reference Site 1 characteristics (lowest LCOE)
+# Shallow water, close to shore, high NCF
+# 2035 technology choices:
+#   - 20 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
   num_feeders: 1
@@ -7,7 +10,8 @@ array_cable_bury_vessel: current_cable_lay_vessel
 array_cable_install_vessel: current_cable_lay_vessel
 array_system_design:
   cables:
-  - XLPE_132kV_1
+  - XLPE_66kV_1
+  - XLPE_66kV_2
 design_phases:
 - MonopileDesign
 - ScourProtectionDesign
@@ -17,8 +21,8 @@ design_phases:
 export_cable_bury_vessel: current_export_cable_lay_vessel
 export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
-  cables: 400kV_HVDC
-  percent_added_length: 0.05
+  cables: XLPE_220kV_1
+  percent_added_length: 0.1
 feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -30,7 +34,7 @@ install_phases:
 num_feeders: 2
 plant:
   layout: ring
-  num_turbines: 67
+  num_turbines: 60
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
@@ -40,28 +44,20 @@ port:
 project_parameters:
   opex_rate: 75
   turbine_capex: 1100
-  ncf: 0.516
+  ncf: 0.525
   opex: 65
-  fcr: .1
+  fcr: .058
 scour_protection_design:
   cost_per_tonne: 20
   scour_protection_depth: 1
 site:
-  depth: 40
-  distance: 150
-  distance_to_landfall: 100
-  mean_windspeed: 9.5
+  depth: 28
+  distance: 125
+  distance_to_landfall: 25
+  mean_windspeed: 9
 spi_vessel: current_scour_protection_vessel
 substation_design:
-  backup_gen_cost: 2000000.0
-  mpt_cost_rate: 25000
-  num_substations: 3
-  oss_substructure_cost_rate: 6000
-  other_ancillary_cost: 6000000.0
-  shunt_cost_rate: 70000
-  switchgear_cost: 2900000.0
-  topside_design_cost: 3000000.0
-  topside_fab_cost_rate: 29000
-turbine: 15MW_generic
+  num_substations: 2
+turbine: 20MW_generic
 wtiv: current_wtiv
 weather: block_island.csv
