Updated Site 2 configs

--- a/analysis/orbit_configs/fixed/site_1_2025.yaml
+++ b/analysis/orbit_configs/fixed/site_1_2025.yaml
@@ -1,5 +1,5 @@
 # Reference Site 1 characteristics (lowest LCOE)
-# Shallow water, close to shore, high NCF
+# Shallow water, close to shore, high NCF, high capacity
 # 2025 technology choices:
 #   - 15 MW turbines
 OffshoreSubstationInstallation:
