--- a/analysis/orbit_configs/fixed/site_2_2030.yaml
+++ b/analysis/orbit_configs/fixed/site_2_2030.yaml
@@ -1,3 +1,7 @@
+# Reference Site 2 characteristics
+# Shallow water, far from shore, high NCF, mid-range capacity
+# 2030 technology choices:
+#   - 18 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
   num_feeders: 1
@@ -30,7 +34,7 @@ install_phases:
 num_feeders: 2
 plant:
   layout: ring
-  num_turbines: 67
+  num_turbines: 45
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
@@ -44,13 +48,13 @@ scour_protection_design:
   cost_per_tonne: 20
   scour_protection_depth: 1
 site:
-  depth: 20
-  distance: 150
-  distance_to_landfall: 25
+  depth: 30
+  distance: 285
+  distance_to_landfall: 48
   mean_windspeed: 9
 spi_vessel: current_scour_protection_vessel
 substation_design:
-  num_substations: 3
-turbine: 15MW_generic
+  num_substations: 1
+turbine: 18MW_generic
 wtiv: current_wtiv
 weather: block_island.csv
