--- a/analysis/orbit_configs/fixed/site_1_2021.yaml
+++ b/analysis/orbit_configs/fixed/site_1_2021.yaml
@@ -1,5 +1,5 @@
 # Reference Site 1 characteristics (lowest LCOE)
-# Shallow water, close to shore, high NCF
+# Shallow water, close to shore, high NCF, high capacity
 # 2021 technology choices:
 #   - 12 MW turbines
 OffshoreSubstationInstallation:
