--- a/analysis/orbit_configs/floating/site_3_2035.yaml
+++ b/analysis/orbit_configs/floating/site_3_2035.yaml
@@ -1,6 +1,6 @@
-# Floating reference Site 1 characteristics
-# Shallow water, close to shore, high NCF, high capacity
-# 2021 technology choices:
+# Floating reference Site 3 characteristics
+# Deep water, far shore, far from port, moderate NCF
+# 2035 technology choices:
 #   - 20 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
@@ -22,7 +22,7 @@ export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
   cables: XLPE_220kV_1
   percent_added_length: 0.1
-  touchdown_distance: 800
+  touchdown_distance: 600
 #feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -46,17 +46,17 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.557
+  ncf: 0.504
   opex: 65
   fcr: .058
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
 site:
-  depth: 832
-  distance: 55.5
-  distance_to_landfall: 42
-  mean_windspeed: 10.8
+  depth: 640
+  distance: 247.5
+  distance_to_landfall: 48.7
+  mean_windspeed: 9.4
 #spi_vessel: current_scour_protection_vessel
 substation_design:
   num_substations: 2
