--- a/analysis/orbit_configs/floating/site_4_2021.yaml
+++ b/analysis/orbit_configs/floating/site_4_2021.yaml
@@ -1,7 +1,7 @@
-# Floating reference Site 1 characteristics
-# Shallow water, close to shore, high NCF, high capacity
+# Floating reference Site 4 characteristics
+# Fairly shallow water, close to shore, close to port, low NCF
 # 2021 technology choices:
-#   - 20 MW turbines
+#   - 12 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
   num_feeders: 1
@@ -11,7 +11,7 @@ array_system_design:
   cables:
   - XLPE_66kV_1
   - XLPE_66kV_2
-  floating_cable_depth: 300
+  floating_cable_depth: 200
 design_phases:
 - SemiSubmersibleDesign
 - MooringSystemDesign
@@ -22,7 +22,7 @@ export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
   cables: XLPE_220kV_1
   percent_added_length: 0.1
-  touchdown_distance: 800
+  touchdown_distance: 300
 #feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -36,7 +36,7 @@ mooring_system_design:
   num_lines: 3
 plant:
   layout: ring
-  num_turbines: 30
+  num_turbines: 50
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
@@ -46,17 +46,17 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.557
-  opex: 65
+  ncf: 0.4
+  opex: 250
   fcr: .058
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
 site:
-  depth: 832
-  distance: 55.5
-  distance_to_landfall: 42
-  mean_windspeed: 10.8
+  depth: 279
+  distance: 55
+  distance_to_landfall: 32
+  mean_windspeed: 8
 #spi_vessel: current_scour_protection_vessel
 substation_design:
   num_substations: 2
@@ -66,6 +66,6 @@ towing_vessel_groups:
   num_groups: 2
   station_keeping_vessels: 1
   towing_vessels: 3
-turbine: 20MW_generic
+turbine: 12MW_generic
 #wtiv: current_wtiv
 weather: block_island.csv
