--- a/analysis/orbit_configs/floating/site_5_2035.yaml
+++ b/analysis/orbit_configs/floating/site_5_2035.yaml
@@ -1,6 +1,6 @@
-# Floating reference Site 1 characteristics
-# Shallow water, close to shore, high NCF, high capacity
-# 2021 technology choices:
+# Floating reference Site 5 characteristics
+# Shallow water, close to shore, close to port, moderate NCF
+# 2035 technology choices:
 #   - 20 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
@@ -11,7 +11,7 @@ array_system_design:
   cables:
   - XLPE_66kV_1
   - XLPE_66kV_2
-  floating_cable_depth: 300
+#  floating_cable_depth: 300  # Default to water depth
 design_phases:
 - SemiSubmersibleDesign
 - MooringSystemDesign
@@ -22,7 +22,7 @@ export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
   cables: XLPE_220kV_1
   percent_added_length: 0.1
-  touchdown_distance: 800
+  touchdown_distance: 100
 #feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -33,6 +33,7 @@ install_phases:
 #num_feeders: 2
 mooring_install_vessel: current_AHTS
 mooring_system_design:
+  anchor_type: 'Drag Embedment'
   num_lines: 3
 plant:
   layout: ring
@@ -46,17 +47,17 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.557
+  ncf: 0.504
   opex: 65
   fcr: .058
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
 site:
-  depth: 832
-  distance: 55.5
-  distance_to_landfall: 42
-  mean_windspeed: 10.8
+  depth: 100
+  distance: 52
+  distance_to_landfall: 52
+  mean_windspeed: 9.75
 #spi_vessel: current_scour_protection_vessel
 substation_design:
   num_substations: 2
@@ -66,6 +67,6 @@ towing_vessel_groups:
   num_groups: 2
   station_keeping_vessels: 1
   towing_vessels: 3
-turbine: 20MW_generic
+turbine: 12MW_generic
 #wtiv: current_wtiv
 weather: block_island.csv
