--- a/analysis/orbit_configs/floating/site_2_2035.yaml
+++ b/analysis/orbit_configs/floating/site_2_2035.yaml
@@ -47,8 +47,8 @@ project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
   ncf: 0.519
-  opex: 59
-  fcr: .058
+  opex: 85 # From Wiser
+  fcr: .051 # From Wiser (30 year project life)
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
