--- a/analysis/orbit_configs/floating/deepwater_site_1_2035.yaml
+++ b/analysis/orbit_configs/floating/deepwater_site_1_2035.yaml
@@ -1,7 +1,7 @@
-# Floating reference Site 3 characteristics
-# Deep water, far shore, far from port, moderate NCF
+# Floating reference Site 1 characteristics
+# Shallow water, close to shore, high NCF, high capacity
 # 2021 technology choices:
-#   - 12 MW turbines
+#   - 20 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
   num_feeders: 1
@@ -22,7 +22,7 @@ export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
   cables: XLPE_220kV_1
   percent_added_length: 0.1
-  touchdown_distance: 600
+  touchdown_distance: 800
 #feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -36,7 +36,7 @@ mooring_system_design:
   num_lines: 3
 plant:
   layout: ring
-  num_turbines: 50
+  num_turbines: 30
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
@@ -46,16 +46,16 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.492
-  opex: 243
-  fcr: .058
+  ncf: 0.53
+  opex: 85 # From Wiser
+  fcr: .051 # From Wiser (30 year project life)
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
 site:
-  depth: 832
-  distance: 55.5
-  distance_to_landfall: 42
+  depth: 1000
+  distance: 100
+  distance_to_landfall: 125
   mean_windspeed: 10.8
 #spi_vessel: current_scour_protection_vessel
 substation_design:
@@ -66,6 +66,6 @@ towing_vessel_groups:
   num_groups: 2
   station_keeping_vessels: 1
   towing_vessels: 3
-turbine: 12MW_generic
+turbine: 20MW_generic
 #wtiv: current_wtiv
 weather: block_island.csv
