--- a/analysis/orbit_configs/floating/site_1_2035.yaml
+++ b/analysis/orbit_configs/floating/site_1_2035.yaml
@@ -1,6 +1,6 @@
-# Floating reference Site 1 characteristics
-# Shallow water, close to shore, high NCF, high capacity
-# 2021 technology choices:
+# Floating reference Site 3 characteristics
+# Deep water, far shore, far from port, moderate NCF
+# 2035 technology choices:
 #   - 20 MW turbines
 OffshoreSubstationInstallation:
   feeder: oss_2xfeeder
@@ -22,7 +22,7 @@ export_cable_install_vessel: current_export_cable_lay_vessel
 export_system_design:
   cables: XLPE_220kV_1
   percent_added_length: 0.1
-  touchdown_distance: 800
+  touchdown_distance: 600
 #feeder: current_large_feeder
 install_phases:
   ArrayCableInstallation: 0
@@ -46,7 +46,7 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.503
+  ncf: 0.566
   opex: 85 # From Wiser
   fcr: .051 # From Wiser (30 year project life)
 #scour_protection_design:
