Added LCOE breakdown for OCC and Capex.  Added input for construction financing

--- a/analysis/orbit_configs/floating/deepwater_site_1_2021.yaml
+++ b/analysis/orbit_configs/floating/deepwater_site_1_2021.yaml
@@ -49,6 +49,7 @@ project_parameters:
   ncf: 0.462
   opex: 243
   fcr: .058
+  # construction_financing: 0
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
