--- a/analysis/orbit_configs/floating/deepwater_site_1_2035.yaml
+++ b/analysis/orbit_configs/floating/deepwater_site_1_2035.yaml
@@ -46,9 +46,10 @@ port:
 project_parameters:
 #  opex_rate: 75*
   turbine_capex: 1100
-  ncf: 0.53
+  ncf: 0.59
   opex: 85 # From Wiser
   fcr: .051 # From Wiser (30 year project life)
+  # construction_financing: 0  # Overnight capital csots remove financing
 #scour_protection_design:
 #  cost_per_tonne: 20
 #  scour_protection_depth: 1
